--- a/admin.html
+++ b/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Assessment Admin Console — Subjects & Grades (Per-Grade in Schools CSV)</title>
+  <title>EI Data Tracker Forms Admin Console</title>
   <style>
     :root{ --bg:#0b1020; --card:#121830; --card-2:#0f1530; --text:#e5e7eb; --muted:#9aa4b2; --primary:#4f46e5; --primary-2:#6366f1; --accent:#22c55e; --border:#26304d; --danger:#ef4444; }
     *{box-sizing:border-box}
