--- a/admin.html
+++ b/admin.html
@@ -43,7 +43,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="brand"><div class="dot"></div><h1>Assessment Admin Console — Subjects & Grades (Per-Grade in Schools CSV)</h1></div>
+      <div class="brand"><div class="dot"></div><h1>EI Data Tracker Forms Admin Console</h1></div>
       <span class="pill">Google Sheets Adapter</span>
     </div>
 
