--- a/collector.html
+++ b/collector.html
@@ -46,7 +46,7 @@
     .combo-item:hover, .combo-item.active { background: rgba(99,102,241,0.15); }
 
     .date-wrap { position: relative; }
-    .datepicker { position:absolute; left:0; right:auto; top:calc(100% + 6px); width: 312px; background: var(--card-2); border:1px solid var(--border); border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,.35); padding:10px; display:none; z-index:1000; }
+    .datepicker { position:absolute; left:0; right:0; top:calc(100% + 6px); width: auto; background: var(--card-2); border:1px solid var(--border); border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,.35); padding:12px; display:none; z-index:1000; }
     .datepicker.open { display:block; }
     .dp-header { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px; gap:8px; }
     .dp-header .left, .dp-header .right { display:flex; align-items:center; gap:6px; }
