--- a/collector.html
+++ b/collector.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Assessment Collector — Subjects + Enrollment (Per-Grade Caps)</title>
+  <title>EI Data Tracker Collector Form</title>
   <style>
     :root { --bg:#0b1020; --card:#121830; --card-2:#0f1530; --text:#e5e7eb; --muted:#9aa4b2; --primary:#4f46e5; --primary-2:#6366f1; --accent:#22c55e; --danger:#ef4444; --warning:#f59e0b; --border:#26304d; --input:#0d1330; }
     * { box-sizing:border-box; }
@@ -72,7 +72,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <div class="brand"><div class="dot"></div><div class="title">Assessment Collector — Subjects + Enrollment</div></div>
+      <div class="brand"><div class="dot"></div><div class="title">EI Data Tracker Collector Form</div></div>
       <div id="run-pill" class="pill">Run: <span id="run-meta">loading…</span></div>
     </div>
 
